upgrade on mobile and new things

--- a/src/repositories/projects/pt-projects.json
+++ b/src/repositories/projects/pt-projects.json
@@ -8,7 +8,7 @@
   "link": "string"
 },
 {
-  "title": "Manutenção Site Vetahead",
+  "title": "Criação Marketplace",
   "type": "Escola",
   "description": "A Vetahead é uma empresa de educação americana que busca levar conhecimento sobre o tratamento e cuidado de animais exóticos para o maior número de médicos veterinários.",
   "client": "Vetahead",
