--- a/src/repositories/projects/en-projects.json
+++ b/src/repositories/projects/en-projects.json
@@ -1,1 +1,27 @@
-[]
+[  {
+  "title": "Maintenance Vetahead",
+  "type": "School",
+  "description": "Vetahead is an american vet school that seeks to bring knowledge about the care and treatment of exotic animals",
+  "client": "Vetahead",
+  "date": "In Progress",
+  "images": [""],
+  "link": "https://www.vetahead.vet/"
+},
+{
+  "title": "Agenda for Karts",
+  "type": "Entertainment",
+  "description": "The goal of this project is to create a reusable tool to manage tracks and karts assignments on championships and common rides.",
+  "client": "Kart Sul",
+  "date": "Em andamento",
+  "images": [""],
+  "link": "https://github.com/vhsoares/scheduler-api"
+},
+{
+  "title": "Marketplace Economizei",
+  "type": "Marketplace",
+  "description": "This goal of the project was to build an advanced system with categories, offers and users management. With the help of an automatic system it is possible to easily find outdated offers because of a webcrawler that help the user.",
+  "client": "Economizei",
+  "date": "Concluído em Março 2023",
+  "images": [""],
+  "link": "https://economizei.com/promos-relampago"
+}]
